# FastAPI-tutorial

./: Dockerfile  app.py  pyproject.toml
.devcontainer/: devcontainer.json  postCreateCommand.sh
app/models/: __init__.py  todo_models.py
migrations/: env.py
migrations/versions/: 8421d7948a10_create_todo_table.py
src/: app.py
src/models/: todo_models.py
src/schemas/: __init__.py  todo_schemas.py
src/settings/: base.py
