[tool.poetry]
name = "fastapi-tutorial"
version = "0.1.0"
description = ""
authors = ["kakeruuuun <kakeru213.niconico@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
black = "^23.12.1"
isort = "^5.13.2"
fastapi = "^0.109.0"
alembic = "^1.13.1"
SQLAlchemy = "^2.0.25"
pyproject-flake8 = "^6.1.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 119

[tool.isort]
profile = "black"
line_length = 119

[tool.flake8]
max-line-length = 119
extend-ignore = [
    "E203", # ":"の前の空白を入れないルール
    "W503", # 演算子の前に改行しないようにするルール
    "E501", # black かけても line too long になるところはしかたない
    "W291", # black かけても trailing whitespace になるのはおそらく文字列のなか
    "E722", # エラーはすべて補足したい
]
max-complexity = 19
exclude = [
    "__pycache__",
    "migrations",
]
per-file-ignores = [
    '*/__init__.py:F401,F403',
    'migrations/env.py:F401',
]
